# logicx-mcp

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  truce.toml
.github/workflows/: ci.yml  release.yml
crates/logicx-agent/: Cargo.toml
crates/logicx-agent/src/: agent.rs  connection.rs  lib.rs  ollama.rs
crates/logicx-agent/tests/: live_smoke.rs
crates/logicx-control/: Cargo.toml
crates/logicx-control-bridge/: Cargo.toml
crates/logicx-control-bridge/src/: main.rs
crates/logicx-control/src/: approvals.rs  bridge.rs  cache.rs  executor.rs  lib.rs  macos.rs  notes.rs  permissions_check.rs  smf.rs  state_poller.rs
crates/logicx-control/src/channels/: applescript.rs  ax.rs  cgevent.rs  coremidi.rs  keycmd.rs  mcu.rs  mod.rs  router.rs  scripter.rs
crates/logicx-control/src/macos/: ax_ops.rs  ax_runtime.rs  cg_input.rs  import.rs  mod.rs  permissions.rs  project.rs  tracks.rs  transport.rs
crates/logicx-control/src/macos/ax_native/: core.rs  menu.rs  mod.rs  tempo.rs  transport.rs
crates/logicx-control/src/midi/: engine.rs  mcu_feedback.rs  mcu_protocol.rs  mcu_state.rs  mmc.rs  mod.rs  validate.rs
crates/logicx-control/tests/: live_logic.rs  logic_pro_mcp_parity.rs
crates/logicx-core/: Cargo.toml
crates/logicx-core/src/: connection.rs  control_bridge.rs  diagnostic_log.rs  honest_contract.rs  lib.rs  ollama_proxy.rs  prompt.rs  runtime.rs  session.rs  tools.rs  types.rs
crates/logicx-ollama-proxy/: Cargo.toml
crates/logicx-ollama-proxy/src/: main.rs
crates/logicx-plugin/: Cargo.toml  build.rs
crates/logicx-plugin/src/: editor.rs  lib.rs  main.rs  plugin_state.rs
docs/: ARCHITECTURE.md  SETUP.md
scripts/: build-installer-pkg.sh  install-au.sh  kill-bridge.sh  patch-au-plist.sh  reinstall-for-test.sh  stage-bundles.sh  test-live.sh  test-parity.sh
