[workspace]
resolver = "2"
members = [
    "crates/logicx-core",
    "crates/logicx-control",
    "crates/logicx-agent",
    "crates/logicx-ollama-proxy",
    "crates/logicx-control-bridge",
    "crates/logicx-plugin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/audiohacking/logicx-mcp"

[workspace.dependencies]
logicx-core = { path = "crates/logicx-core" }
logicx-control = { path = "crates/logicx-control" }
logicx-agent = { path = "crates/logicx-agent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "allow"
dead_code = "allow"
unused_imports = "allow"

[profile.shell]
inherits = "release"
