[package]
name = "logicx-control"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
logicx-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
uuid = { version = "1", features = ["v4"] }
